Pushing Laptop code

--- a/FrontEnd/Desktop/skytek-bridge/src/index.html
+++ b/FrontEnd/Desktop/skytek-bridge/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
   </head>
-  <body>
-    <p>loading</p>
+  <body style="background-color: #282c34; text-align: center; color: white;">
+    <div style="width: 100%; height: 25vh; margin-top: calc(50vh - (25vh / 2));">
+      <h1>loading</h1>
+    </div>
   </body>
 </html>
